--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,14 +20,17 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
 }
 
-main {
+.container {
+  display: flex;
+  flex-direction: column;
   flex: 1 1 0%;
+  margin: 32px 80px;
+  border: red solid 1px;
 }
 
 * {
@@ -41,13 +44,11 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
-
 .p {
   font-size: 15px;
   font-weight: 400;
+}
+
+footer {
+  margin-top: auto;
 }
