--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,9 +44,16 @@ a {
   text-decoration: none;
 }
 
-.p {
+p {
   font-size: 15px;
   font-weight: 400;
+  line-height: 22px;
+}
+
+h4 {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 30px;
 }
 
 footer {
