--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,10 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary: #1688fe;
   --border-color: #ececed;
+  --primary-btn-hover: #0c76e7;
+  --primary-btn-active: #0e68c8;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -44,18 +47,25 @@ a {
   text-decoration: none;
 }
 
-p {
+p,
+.checkbox > label {
   font-size: 15px;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 22px;
 }
 
 h4 {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 24px;
   line-height: 30px;
 }
 
 footer {
   margin-top: auto;
+}
+
+.checkbox {
+  display: flex;
+  gap: 8px;
+  align-items: center;
 }
