--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,7 @@
 html,
 body {
   max-width: 100vw;
+  max-height: 100vh;
   overflow-x: hidden;
 }
 
@@ -32,8 +33,8 @@ body {
   display: flex;
   flex-direction: column;
   flex: 1 1 0%;
-  margin: 32px 80px;
-  border: red solid 1px;
+  padding: 32px 80px;
+  overflow-y: auto;
 }
 
 * {
@@ -43,7 +44,7 @@ body {
 }
 
 a {
-  color: inherit;
+  color: var(--primary);
   text-decoration: none;
 }
 
@@ -60,12 +61,39 @@ h4 {
   line-height: 30px;
 }
 
+h5 {
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 24px;
+}
+
 footer {
   margin-top: auto;
+  padding-top: 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .checkbox {
   display: flex;
   gap: 8px;
   align-items: center;
+}
+
+.separator {
+  width: 100%;
+  border-bottom: var(--border-color) solid 1px;
+}
+
+.footer-menu ul {
+  display: flex;
+  gap: 32px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22ox;
+}
+
+.footer-menu li {
+  list-style-type: none;
 }
