--- a/src/app/ui/personalInfo.module.css
+++ b/src/app/ui/personalInfo.module.css
@@ -55,3 +55,19 @@
   transition: all 100ms ease-in-out;
   background-color: var(--primary-btn-active);
 }
+
+.deleteAccount {
+  padding: 16px;
+  border: var(--border-color) solid 1px;
+  border-radius: 8px;
+}
+
+.deleteBtn {
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 22px;
+  color: #f25773;
+  margin-top: 16px;
+  cursor: pointer;
+  width: fit-content;
+}
