updated checkbox font size

--- a/src/app/ui/input/checkbox.module.css
+++ b/src/app/ui/input/checkbox.module.css
@@ -16,3 +16,8 @@
 .hidden_checkbox:checked + .custom_checkbox {
   background-color: var(--primary);
 }
+
+.text {
+  font-size: 13px;
+  line-height: 20px;
+}
