--- a/src/app/ui/personalInfo.module.css
+++ b/src/app/ui/personalInfo.module.css
@@ -28,6 +28,13 @@
   gap: 16px;
 }
 
+.fields {
+  flex: 1 1 0%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 .button {
   background-color: var(--primary);
   border: 0px;
